manifests/dbapp/adminer-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-dep
  labels:
    program: helm
    sample: dbapp
spec:
  replicas: 1
  selector:
    matchLabels:
      program: helm
      sample: dbapp
      layer: frontend
  template:
    metadata:
      labels:
        program: helm
        sample: dbapp
        layer: frontend
    spec:
      containers:
        - name: webserver
          image: adminer:4.7
