manifests/dbapp/mysql-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-dep
  labels:
    program: helm
    sample: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      program: helm
      sample: mysql
      layer: database
  template:
    metadata:
      labels:
        program: helm
        sample: mysql
        layer: database
    spec:
      volumes:
        - name: dbvol
          persistentVolumeClaim:
            claimName: mysql-pvc
      containers:
        - name: c1
          image: mysql:5.7
          volumeMounts:
            - name: dbvol
              mountPath: /var/lib/mysql
