manifests/dbapp/adminer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-svc
  labels:
    program: helm
    sample: dbapp
spec:
  type: NodePort
  selector:
    program: helm
    sample: dbapp
    layer: frontend
  ports:
    - name: adminer
      port: 8080
      nodePort: 31000
