manifests/dbapp/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    program: helm
    sample: mysql
spec:
  type: ClusterIP
  selector:
    program: helm
    sample: mysql
    layer: database
  ports:
    - name: mysql
      port: 3306
